--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,44 @@
-
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+input{
+    outline: none;
+    padding: 10px 15px;
+    font-size: 20px;
+    border-radius: 10px;
+    border: 1px solid grey;
+}
+button{
+    border-radius: 10px;
+    padding: 10px;
+    background: #000;
+    color: white;
+    transition: .3s;
+}
+button:hover{
+    background: white;
+    color: #000;
+    cursor: pointer;
+}
+.App{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    display: flex;
+    gap: 15px;
+    flex-direction: column;
+}
+.App button{
+    width: 200px;
+    font-size: 25px;
+}
+.App a{
+    width: 100%;
+    display: block;
+    color: inherit;
+    text-decoration: none;
+}
