--- a/src/App.css
+++ b/src/App.css
@@ -1,44 +1,61 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+* {
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
+	font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
-input{
-    outline: none;
-    padding: 10px 15px;
-    font-size: 20px;
-    border-radius: 10px;
-    border: 1px solid grey;
+input {
+	outline: none;
+	padding: 10px 15px;
+	font-size: 20px;
+	border-radius: 10px;
+	border: 1px solid grey;
 }
-button{
-    border-radius: 10px;
-    padding: 10px;
-    background: #000;
-    color: white;
-    transition: .3s;
+textarea {
+	outline: none;
+	padding: 10px 15px;
+	font-size: 20px;
+	border-radius: 10px;
+	border: 1px solid grey;
 }
-button:hover{
-    background: white;
-    color: #000;
-    cursor: pointer;
+button {
+	border-radius: 10px;
+	padding: 10px;
+	background: #000;
+	color: white;
+	transition: 0.3s;
 }
-.App{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    display: flex;
-    gap: 15px;
-    flex-direction: column;
+button:hover {
+	background: white;
+	color: #000;
+	cursor: pointer;
 }
-.App button{
-    width: 200px;
-    font-size: 25px;
+.container {
+	max-width: 1200px;
+	margin: 0 auto;
+	padding: 0 30px;
 }
-.App a{
-    width: 100%;
-    display: block;
-    color: inherit;
-    text-decoration: none;
+.App {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	display: flex;
+	gap: 15px;
+	flex-direction: column;
+}
+.App button {
+	width: 200px;
+	font-size: 25px;
+}
+.App a {
+	width: 100%;
+	display: block;
+	color: inherit;
+	text-decoration: none;
+}
+.posts_list {
+	display: flex;
+	flex-direction: column;
+	gap: 30px;
 }
